--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3",
+    "python.pythonPath": "venv/bin/python",
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "files.autoSave": "afterDelay",
