--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@
 # H405: multi line docstring summary not separated with an empty line
 # H501: Do not use self.__dict__ for string formatting
 
-ignore = F812,H101,H202,H233
+# ignore = F812,H101,H202,H233
 exclude =
     venv,
     # No need to traverse our git directory
